# ArcVP

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: Channel.h  arcvp.h  audio_device.h  audio_device_manager.h  channel.h  decode_worker.h  frame_queue.h  media_context.h  player.h  sync_state.h  video-reader.hh
src/: arcvp_audio.cc  arcvp_decode_handler.cc  arcvp_decoder.cc  arcvp_file_handler.cc  arcvp_openclose.cc  arcvp_pause.cc  arcvp_playback_handler.cc  arcvp_player.cc  arcvp_speedseek_handler.cc  arcvp_video.cc  audio-handler.cc  audio_decode.cc  control-panel.cc  control.cc  events-handler.cc  imgui_sdl.cpp  init.cc  openclose.cc  packet_decode.cc  seek.cc  seeker.cc  setter.cc  video-handler.cc  video_decode.cc  workers.cc
